# permutations

./: .gitmodules  evaluateswitchpermutations.cpp  insertion_algorithm2.cpp  insertion_permutations.cpp  lis_insertion.cpp  permutations.cpp
database/Insertion/: Insertion_R25_N100.txt  Insertion_R25_N150.txt  Insertion_R25_N200.txt  Insertion_R25_N250.txt  Insertion_R25_N300.txt  Insertion_R25_N350.txt  Insertion_R25_N400.txt  Insertion_R25_N450.txt  Insertion_R25_N50.txt  Insertion_R25_N500.txt
database/Rev/: Rev_R25_N100.txt  Rev_R25_N150.txt  Rev_R25_N200.txt  Rev_R25_N250.txt  Rev_R25_N300.txt  Rev_R25_N350.txt  Rev_R25_N400.txt  Rev_R25_N450.txt  Rev_R25_N50.txt  Rev_R25_N500.txt
database/Rev/OP100/: Rev_R100_N100.txt  Rev_R100_N150.txt  Rev_R100_N200.txt  Rev_R100_N250.txt  Rev_R100_N300.txt  Rev_R100_N350.txt  Rev_R100_N400.txt  Rev_R100_N450.txt  Rev_R100_N50.txt  Rev_R100_N500.txt
database/Rev/OP25/: Rev_R25_N150.txt  Rev_R25_N250.txt  Rev_R25_N350.txt  Rev_R25_N450.txt  Rev_R25_N50.txt  Rev_R25_N500.txt
database/Swap/: Swap_R25_N100.txt  Swap_R25_N150.txt  Swap_R25_N200.txt  Swap_R25_N250.txt  Swap_R25_N300.txt  Swap_R25_N350.txt  Swap_R25_N400.txt  Swap_R25_N450.txt  Swap_R25_N50.txt  Swap_R25_N500.txt
database/Trans/: Trans_R25_N100.txt  Trans_R25_N150.txt  Trans_R25_N200.txt  Trans_R25_N250.txt  Trans_R25_N300.txt  Trans_R25_N350.txt  Trans_R25_N400.txt  Trans_R25_N450.txt  Trans_R25_N50.txt  Trans_R25_N500.txt
instances_generator/: Makefile  gen_db.sh  hie.yaml  package.yaml  stack.yaml
instances_generator/app/: DB.hs
instances_generator/src/: Genomes.hs  LocalBase.hs
rev_trans/: CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
rev_trans/misc/: dist.hpp  greedyBP.cpp  greedyBP.hpp  io.cpp  io.hpp  permutation.cpp  permutation.hpp  timer.cpp  timer.hpp
(+95 files in other folders)
